test/valid/41625_NamedAfterAnotherClass/A.plume
/**
 * Valid Test.
 * Class has method named after another class.
 * @author FábioBotelho - 41625@alunos.fc.ul.pt
 * @version $id 
 */
 
 
 class A extends Object is 
 
 	method Object : () -> Object is 
 		new Object()
 		  
 	method Boolean : () -> Boolean is 
 		true 