test/invalid/41625_IndirectCycle/A.plume
/**
  * Invalid Test. 
  * Class hierarchy must be acyclic. A extends B and B extends A.  
  * @author FábioBotelho - 41625@alunos.fc.ul.pt
  * @version $id 
 */
 
 class A extends B is 
 	